# Arca

./: .env.example  .gitignore  Cargo.toml  README.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: manifest.webmanifest
frontend/src/: App.js  App.tsx  main.js  main.tsx  styles.css
frontend/src/api/: auth.js  auth.ts  client.js  client.ts  media.js  media.ts
frontend/src/components/: ActionSheet.js  ActionSheet.tsx  Icon.js  Icon.tsx  Layout.js  Layout.tsx  Lightbox.js  Lightbox.tsx  PhotoGrid.js  PhotoGrid.tsx  ProtectedRoute.js  ProtectedRoute.tsx
frontend/src/components/gallery/: ScopeBar.js  (+7 more)
frontend/src/hooks/: useAuth.js  useAuth.ts  useBuckets.js  useBuckets.ts  useGallery.js  useGallery.ts  useLongPress.js  useLongPress.ts  useMediaMutations.js  useMediaMutations.ts  useSelection.js  useSelection.ts  useTheme.js  useTheme.ts  useTrash.js  useTrash.ts
frontend/src/lib/: db.js  db.ts  hashPool.js  hashPool.ts  sha256.worker.js  sha256.worker.ts
frontend/src/pages/: Gallery.js  Gallery.tsx  Login.js  Login.tsx  Register.js  Register.tsx  Trash.js  Trash.tsx  Upload.js  Upload.tsx
migrations/: 0001_init.sql  0002_trash_and_indexes.sql
scripts/: smoke-upload.ps1
src/: config.rs  db.rs  error.rs  main.rs  router.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
src/domain/: media.rs  user.rs
src/handlers/: auth.rs  media.rs
src/repositories/: media.rs  user.rs
src/services/: auth.rs  media.rs
src/upload/: storage.rs
src/workers/: mod.rs  pipeline.rs  purge.rs
